--- a/src/main/resources/templates/information/information.html
+++ b/src/main/resources/templates/information/information.html
@@ -4,6 +4,8 @@
 
 <head th:replace="layout :: head"></head>
 <body>
+<div th:replace="layout :: flash"></div>
+
 <nav th:replace="layout :: nav"></nav>
 
 <!-- Only admins are autorized to make new news items and events -->
