--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head></head>
 <body>
+<div th:replace="layout :: flash"></div>
 
 <form th:action="@{/login}" th:object="${user}" method="post">
 
