--- a/src/main/resources/templates/ad/form.html
+++ b/src/main/resources/templates/ad/form.html
@@ -13,7 +13,7 @@
 
     <h2 th:text="${heading}">Búa til auglýsingu</h2>
 
-    <input type="text" th:field="*{link}" placeholder="Linkur"/>
+    <input type="text" th:field="*{link}" placeholder="http://ja.is"/>
     <div class="error-message" th:if="${#fields.hasErrors('link')}" th:errors="*{link}"></div>
 
     <div class="file-wrapper">
