--- a/src/main/resources/templates/event/eventDetails.html
+++ b/src/main/resources/templates/event/eventDetails.html
@@ -13,6 +13,7 @@
     <title>Nörd | Nemendafélag</title>
 </head>
 <body>
+<div th:replace="layout :: flash"></div>
 <header th:replace="layout :: header"></header>
 <div th:replace="ad/ad :: ads"></div>
 
