--- a/src/main/resources/templates/ad/ad.html
+++ b/src/main/resources/templates/ad/ad.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 
 <html>
-<head th:replace="layout :: head"></head>
+<head>
+    <meta content ="text/html" charset="UTF-8"/>
+    <meta description="viewport" content="width=device-width, initial-scale=1"/>
+
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/eventDetails.css}"/>
+
+    <title>Nörd | Nemendafélag</title>
+</head>
 <body>
 <div th:fragment="ads" id="ads">
     <!-- For each ad -->
@@ -10,10 +20,14 @@
         <a th:href="@{http://} + ${ad.link}">
             <img th:src="@{|/ad/${ad.id}.jpg|}" alt="adLogo" />
         </a>
-       <!-- <div>
-            <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/ad/${ad.id}/edit|}">Breyta</a>
-            <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/ad/${ad.id}/delete|}">Eyða</a>
-        </div> -->
+       <!--<div id="editDeleteAds">
+            <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/ad/${ad.id}/edit|}">Breyta
+                <img th:src="@{/assets/img/edit.png}" alt="edit symbol" />
+            </a>
+            <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/ad/${ad.id}/delete|}">Eyða
+                <img th:src="@{/assets/img/delete.png}" alt="delete symbol" />
+            </a>
+        </div>-->
 
     </div>
 </div>
