--- a/src/main/resources/templates/news/form.html
+++ b/src/main/resources/templates/news/form.html
@@ -7,37 +7,44 @@
 
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/newsForm.css}"/>
 
     <title>Nörd | Nemendafélag</title>
 </head>
 <body>
-<div th:replace="layout :: flash"></div>
+    <header th:replace="layout :: header"></header>
 
-<form enctype="multipart/form-data" th:action="@{${action}}" method="post" th:object="${news}">
-    <input type="hidden" th:field="*{id}"/>
+    <form id="newsForm" enctype="multipart/form-data" th:action="@{${action}}" method="post" th:object="${news}">
+        <input type="hidden" th:field="*{id}"/>
 
-    <h2 th:text="${heading}">Búa til frétt</h2>
+        <h1 th:text="${heading}"></h1>
 
-    <label for="title">Fyrirsögn:</label>
-    <input type="text" th:field="*{title}" id="title" placeholder="Fyrirsögn"/>
-    <div class="error-message" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
+        <!--<label for="title">Fyrirsögn:</label>-->
+        <input type="text" th:field="*{title}" id="title" placeholder="Fyrirsögn"/>
+        <div class="error-message" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
 
-    <label for="description">Meginmál:</label>
-    <textarea cols="86" rows ="20" th:field="*{description}" id="description" placeholder="Meginmál"></textarea>
-    <div class="error-message" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></div>
-
-    <div class="file-wrapper">
-        <input type="file" id="file" name="file"/>
-        <span class="placeholder" data-placeholder="Choose an image...">Choose an image...</span>
-        <label for="file" class="button">Browse</label>
-    </div>
-    <input type="hidden" th:field="*{bytes}"/>
-
-    <button th:text="${submit}" type="submit"></button>
-</form>
+        <!--<label for="description">Meginmál:</label>-->
+        <textarea cols="40" rows ="20" th:field="*{description}" id="description" placeholder="Meginmál"></textarea>
+        <div class="error-message" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></div>
 
 
-<a th:href="@{/}">Fara á forsíðu</a>
+        <div class="file-wrapper">
+            <input class="inputFile" type="file" id="file" name="file" onchange="readURL(this);" />
+            <label for="file">Veldu bakgrunnsmynd fyrir fréttina</label>
+            <div id="preview" th:style="|background-image:
+                        linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url(/news/${news.id}.jpeg)|"></div>
+        </div>
+        <input type="hidden" th:field="*{bytes}"/>
+
+        <button th:text="${submit}" type="submit"></button>
+    </form>
+
+    <footer th:replace="layout :: footer"></footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script type="text/javascript" th:src="@{/assets/js/main.js}"></script>
+    <script type="text/javascript" th:src="@{/assets/js/newsForm.js}"></script>
 
 </body>
 
