--- a/src/main/resources/templates/event/eventDetails.html
+++ b/src/main/resources/templates/event/eventDetails.html
@@ -22,7 +22,7 @@
         <p sec:authorize="hasRole('ROLE_ADMIN')" class="infoText sectionInfo">Stjórnandi</p>
         <section sec:authorize="hasRole('ROLE_ADMIN')" class="section adminSection">
             <div id="editDelete">
-                <a th:href="@{|/event/${news.id}/delete|}"><img th:src="@{/assets/img/delete.png}" alt="delete symbol" /></a>
+                <a id="deleteEvent" th:href="@{|/event/${news.id}/delete|}"><img th:src="@{/assets/img/delete.png}" alt="delete symbol" /></a>
                 <a th:href="@{|/event/${news.id}/edit|}"><img th:src="@{/assets/img/edit.png}" alt="edit symbol" /></a>
             </div>
         </section>
@@ -144,6 +144,7 @@
 </main>
 
 <footer th:replace="layout :: footer"></footer>
+<div th:replace="layout :: scripts"></div>
 
 <script type="text/javascript" th:src="@{/assets/js/main.js}"></script>
 <script type="text/javascript" th:src="@{/assets/js/eventDetails.js}"></script>
