--- a/src/main/resources/templates/news/form.html
+++ b/src/main/resources/templates/news/form.html
@@ -42,6 +42,7 @@
 
     <footer th:replace="layout :: footer"></footer>
 
+    <div th:replace="layout :: scripts"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" th:src="@{/assets/js/main.js}"></script>
     <script type="text/javascript" th:src="@{/assets/js/newsForm.js}"></script>
