--- a/src/main/resources/templates/ad/form.html
+++ b/src/main/resources/templates/ad/form.html
@@ -7,7 +7,7 @@
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
         <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
         <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
-        <link rel="stylesheet" th:href="@{/assets/css/ads.css}"/>
+        <link rel="stylesheet" th:href="@{/assets/css/sponsors.css}"/>
 
         <title>Nörd | Nemendafélag</title>
     </head>
@@ -22,7 +22,7 @@
             <div class="file-wrapper">
                 <input class="inputFile" type="file" id="file" name="file" onchange="readURL(this);" />
                 <label for="file">Veldu mynd</label>
-                <img id="preview" th:src="@{|/ad/${ad.id}.jpg|}" alt="your image" />
+                 <img id="preview" th:src="${ad.id}!=null ? @{|/ad/${ad.id}.jpg|} : ''" alt="your image" />
             </div>
 
             <input type="hidden" th:field="*{bytes}"/>
@@ -40,7 +40,7 @@
             <div class="eachAd" th:each="ad : ${adService.findAll()}" >
 
                 <a th:href="@{http://} + ${ad.link}">
-                    <img class="adImg" th:src="@{|/ad/${ad.id}.jpg|}" alt="adLogo" />
+                    <img class="sponsorImg" th:src="@{|/ad/${ad.id}.jpg|}" alt="adLogo" />
                 </a>
                 <div id="editDeleteAds">
                       <a th:href="@{|/ad/${ad.id}/edit|}">
@@ -57,6 +57,6 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script type="text/javascript" th:src="@{/assets/js/main.js}"></script>
-        <script type="text/javascript" th:src="@{/assets/js/ads.js}"></script>
+        <script type="text/javascript" th:src="@{/assets/js/sponsors.js}"></script>
     </body>
 </html>
