--- a/src/main/resources/templates/ad/form.html
+++ b/src/main/resources/templates/ad/form.html
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta content ="text/html" charset="UTF-8"/>
-        <meta description="viewport" content="width=device-width, initial-scale=1"/>
+<head>
+    <meta content="text/html" charset="UTF-8"/>
+    <meta description="viewport" content="width=device-width, initial-scale=1"/>
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/sponsors.css}"/>
+    <title>Nörd | Nemendafélag</title>
+</head>
 
-        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-        <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
-        <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
-        <link rel="stylesheet" th:href="@{/assets/css/sponsors.css}"/>
+<body>
+<header th:replace="layout :: header"></header>
 
-        <title>Nörd | Nemendafélag</title>
-    </head>
-    <body>
-    <header th:replace="layout :: header"></header>
+<main>
+<form id="createEditAd" enctype="multipart/form-data" th:action="@{${action}}" method="post" th:object="${ad}">
+    <input type="hidden" th:field="*{id}"/>
 
-        <form id="createEditAd" enctype="multipart/form-data" th:action="@{${action}}" method="post" th:object="${ad}">
-            <input type="hidden" th:field="*{id}"/>
+    <h1 th:text="${heading}">Búa til auglýsingu</h1>
 
-            <h1 th:text="${heading}">Búa til auglýsingu</h1>
+    <div class="file-wrapper">
+        <input class="inputFile" type="file" id="file" name="file" onchange="readURL(this);"/>
+        <label for="file">Veldu mynd</label>
+        <img id="preview" th:src="${ad.id}!=null ? @{|/ad/${ad.id}.jpg|} : ''" alt="your image"/>
+    </div>
 
-            <div class="file-wrapper">
-                <input class="inputFile" type="file" id="file" name="file" onchange="readURL(this);" />
-                <label for="file">Veldu mynd</label>
-                 <img id="preview" th:src="${ad.id}!=null ? @{|/ad/${ad.id}.jpg|} : ''" alt="your image" />
-            </div>
+    <input type="hidden" th:field="*{bytes}"/>
 
-            <input type="hidden" th:field="*{bytes}"/>
+    <input id="inputLink" type="text" th:field="*{link}" placeholder="Linkur"/>
+    <div class="error-message" th:if="${#fields.hasErrors('link')}" th:errors="*{link}"></div>
 
-            <input id="inputLink" type="text" th:field="*{link}" placeholder="Linkur"/>
-            <div class="error-message" th:if="${#fields.hasErrors('link')}" th:errors="*{link}"></div>
+    <button th:text="${submit}" type="submit"></button>
+</form>
 
-            <button th:text="${submit}" type="submit"></button>
-        </form>
+<div th:replace="layout :: flash"></div>
 
-        <div th:replace="layout :: flash"></div>
+<h2>Allar auglýsingar</h2>
+<section id="allAds">
+    <div class="eachAd" th:each="ad : ${adService.findAll()}">
 
-        <h2>Allar auglýsingar</h2>
-        <section id="allAds">
-            <div class="eachAd" th:each="ad : ${adService.findAll()}" >
+        <a th:href="@{http://} + ${ad.link}">
+            <img class="sponsorImg" th:src="@{|/ad/${ad.id}.jpg|}" alt="adLogo"/>
+        </a>
+        <div id="editDeleteAds">
+            <a th:href="@{|/ad/${ad.id}/edit|}"><img class="imgAction" th:src="@{/assets/img/edit.png}"
+                                                     alt="edit symbol"/></a>
+            <a id="deleteAd" th:href="@{|/ad/${ad.id}/delete|}"><img class="imgAction"
+                                                                     th:src="@{/assets/img/delete.png}"
+                                                                     alt="delete symbol"/></a>
+        </div>
+    </div>
+</section>
+</main>
 
-                <a th:href="@{http://} + ${ad.link}">
-                    <img class="sponsorImg" th:src="@{|/ad/${ad.id}.jpg|}" alt="adLogo" />
-                </a>
-                <div id="editDeleteAds">
-                      <a th:href="@{|/ad/${ad.id}/edit|}">
-                          <img class="imgAction" th:src="@{/assets/img/edit.png}" alt="edit symbol" />
-                      </a>
-                      <a th:href="@{|/ad/${ad.id}/delete|}">
-                          <img class="imgAction" th:src="@{/assets/img/delete.png}" alt="delete symbol" />
-                      </a>
-                 </div>
-            </div>
-        </section>
+<footer th:replace="layout :: footer"></footer>
+<div th:replace="layout :: scripts"></div>
 
-        <footer th:replace="layout :: footer"></footer>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script type="text/javascript" th:src="@{/assets/js/main.js}"></script>
-        <script type="text/javascript" th:src="@{/assets/js/sponsors.js}"></script>
-    </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script type="text/javascript" th:src="@{/assets/js/sponsors.js}"></script>
+</body>
 </html>
