--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,18 +6,18 @@
     <title>Villa í slóðinni </title>
 </head>
 <body>
+<header th:replace="layout :: header"></header>
 
+<main>
 <h1>Villa hefur komið upp</h1>
-<!--<h3 th:text="|HTTP ${attrs.status} ${attrs.error}|"></h3>
-<p th:text="${attrs.message}"></p>-->
 
 <div th:switch="${attrs.status}">
     <p th:case="403">Þú hefur ekki aðgang að þessari síðu</p>
     <p th:case="404">Síða finnst ekki</p>
     <p th:case="*">Villa hefur komið upp</p>
 </div>
-
-
+</main>
+<footer th:replace="layout :: footer"></footer>
 
 </body>
 </html>
