--- a/src/main/resources/templates/information/boardForm.html
+++ b/src/main/resources/templates/information/boardForm.html
@@ -2,12 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>Nemendafélagið Nörd</title>
-    <link rel="stylesheet" href="../../css/normalize.css" />
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
 </head>
+
 <body>
 
+<header th:replace="layout :: header"></header>
+
+<main>
 <form enctype="multipart/form-data" th:action="@{${action}}" method="post" th:object="${infoBoard}">
     <input type="hidden" th:field="*{id}"/>
 
@@ -34,9 +40,11 @@
 
 </form>
 
-
-
 <a th:href="@{/}">Fara á forsíðu</a>
+</main>
+
+<footer th:replace="layout :: footer"></footer>
+<div th:replace="layout :: scripts"></div>
 
 </body>
 
