--- a/src/main/resources/templates/information/form.html
+++ b/src/main/resources/templates/information/form.html
@@ -2,11 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>Nemendafélagið Nörd</title>
-    <link rel="stylesheet" href="@{/assets/css/normalize.css}" />
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
 </head>
+
 <body>
+<header th:replace="layout :: header"></header>
+
+<main>
 <div th:replace="layout :: flash"></div>
 
 <form th:action="@{${action}}" method="post" th:object="${infoNord}">
@@ -17,16 +23,17 @@
     <input type="text" th:field="*{title}" placeholder="Yfirheiti"/>
     <div class="error-message" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
 
-    <textarea cols="86" rows ="20" th:field="*{content}" placeholder="Innihald"></textarea>
+    <textarea cols="86" rows="20" th:field="*{content}" placeholder="Innihald"></textarea>
     <div class="error-message" th:if="${#fields.hasErrors('content')}" th:errors="*{content}"></div>
 
     <button th:text="${submit}" type="submit"></button>
 
 </form>
 
-
 <a th:href="@{/}">Fara á forsíðu</a>
-
+</main>
+<footer th:replace="layout :: footer"></footer>
+<div th:replace="layout :: scripts"></div>
 </body>
 
 </html>
