--- a/src/main/resources/templates/information/information.html
+++ b/src/main/resources/templates/information/information.html
@@ -2,63 +2,66 @@
 
 <html>
 
-<head th:replace="layout :: head"></head>
+<head>
+    <meta content="text/html" charset="UTF-8"/>
+    <meta description="viewport" content="width=device-width, initial-scale=1"/>
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
+    <title>Nörd | Nemendafélag</title>
+</head>
+
 <body>
+<header th:replace="layout :: header"></header>
+
+<main>
 <div th:replace="layout :: flash"></div>
-
-<nav th:replace="layout :: nav"></nav>
-
-<!-- Only admins are autorized to make new news items and events -->
-<div class="new-items">
-    <a sec:authorize="hasRole('ROLE_ADMIN')" href="/news/add">Búa til frétt</a>
-    <a sec:authorize="hasRole('ROLE_ADMIN')" href="/event/add">Búa til viðburð</a>
-    <a sec:authorize="hasRole('ROLE_ADMIN')" href="/user/add">Bæta við notanda</a>
-    <a sec:authorize="hasAnyRole('ROLE_ADMIN, ROLE_USER')" href="/user/userList">Listi yfir notendur</a>
-    <a sec:authorize="hasRole('ROLE_ADMIN')" href="/ad/add">Bæta við auglýsingu</a>
-    <a sec:authorize="hasRole('ROLE_ADMIN')" href="/infoNord/add">Bæta við upplýsingum um Nörd</a>
-    <a sec:authorize="hasRole('ROLE_ADMIN')" href="/infoBoard/add">Bæta við upplýsingum um stjórn/miðstjórn</a>
-</div>
-
 
 <!-- For each info item -->
 <h1 th:if="${infoNord}">Um Nörd</h1>
-<div th:each="infoNord : ${infoNord}" >
+<div th:each="infoNord : ${infoNord}">
     <h2 th:text="${infoNord.title}"></h2>
     <a th:text="${infoNord.content}"></a>
     <div>
         <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/infoNord/${infoNord.id}/edit|}">Breyta</a>
-        <a id="deleteInfoNord + ${infoNord.count}" sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/infoNord/${infoNord.id}/delete|}">Eyða</a>
+        <a id="deleteInfoNord + ${infoNord.count}" sec:authorize="hasRole('ROLE_ADMIN')"
+           th:href="@{|/infoNord/${infoNord.id}/delete|}">Eyða</a>
     </div>
 </div>
 
 <h1 th:if="${infoBoard}">Stjórn Nörd</h1>
-<div th:each="infoBoard : ${infoBoard}" >
+<div th:each="infoBoard : ${infoBoard}">
     <div th:if="${infoBoard.isBoard} == true">
         <h3 th:text="${infoBoard.title}"></h3>
         <h4 th:text="${infoBoard.name}"></h4>
-        <img th:src="@{|/infoBoard/${infoBoard.id}.jpg|}" alt="boardMember" />
+        <img th:src="@{|/infoBoard/${infoBoard.id}.jpg|}" alt="boardMember"/>
         <div>
             <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/infoBoard/${infoBoard.id}/edit|}">Breyta</a>
-            <a id="deleteInfoBoard + ${infoBoard.count}" sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/infoBoard/${infoBoard.id}/delete|}">Eyða</a>
+            <a id="deleteInfoBoard + ${infoBoard.count}" sec:authorize="hasRole('ROLE_ADMIN')"
+               th:href="@{|/infoBoard/${infoBoard.id}/delete|}">Eyða</a>
         </div>
     </div>
 </div>
 
 <h1 th:if="${infoBoard}">Miðstjórn Nörd</h1>
-<div th:each="infoBoard : ${infoBoard}" >
+<div th:each="infoBoard : ${infoBoard}">
     <div th:if="${infoBoard.isBoard} == false">
         <h3 th:text="${infoBoard.title}"></h3>
         <h4 th:text="${infoBoard.name}"></h4>
-        <img th:src="@{|/infoBoard/${infoBoard.id}.jpg|}" alt="boardMember" />
+        <img th:src="@{|/infoBoard/${infoBoard.id}.jpg|}" alt="boardMember"/>
         <div>
             <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/infoBoard/${infoBoard.id}/edit|}">Breyta</a>
-            <a id="deleteInfoMiddleBoard + ${infoBoard.count}" sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/infoBoard/${infoBoard.id}/delete|}">Eyða</a>
+            <a id="deleteInfoMiddleBoard + ${infoBoard.count}" sec:authorize="hasRole('ROLE_ADMIN')"
+               th:href="@{|/infoBoard/${infoBoard.id}/delete|}">Eyða</a>
         </div>
     </div>
 </div>
+</main>
 
 <div th:replace="layout :: scripts"></div>
+<footer th:replace="layout :: footer"></footer>
 
 </body>
+
 
 </html>
