--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head th:fragment="head">
-    <meta content ="text/html" charset="UTF-8"/>
+    <meta content="text/html" charset="UTF-8"/>
     <meta description="viewport" content="width=device-width, initial-scale=1"/>
-
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
     <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
-    <!--<link rel="stylesheet" th:href="@{/assets/css/articles.css}"/>-->
-
     <title>Nörd | Nemendafélag</title>
 </head>
+
 <body>
 <header th:fragment="header" class="main-header">
     <nav class="nav" id="myNav">
@@ -20,7 +18,7 @@
 
         <div id="userImage">
             <a href="javascript:void(0);" onclick="toggleUserMenu()">
-                <img th:src="@{/assets/img/me.jpg}" alt="User image" />
+                <img th:src="@{/assets/img/me.jpg}" alt="User image"/>
             </a>
             <div id="userMenu" class="menu" th:switch="${#authorization.expression('isAuthenticated()')}">
                 <ul th:case="${true}">
@@ -39,7 +37,7 @@
             </div>
         </div>
 
-        <div id="hamburgerIcon"  th:switch="${#authorization.expression('isAuthenticated()')}">
+        <div id="hamburgerIcon" th:switch="${#authorization.expression('isAuthenticated()')}">
             <a href="javascript:void(0);" onclick="toggleHamburgerMenu()">&#9776;</a>
             <ul id="hamburgerMenu" class="menu">
                 <li sec:authorize="hasRole('ROLE_ADMIN')" id="adminSubMenuHeading">
@@ -49,16 +47,19 @@
                         <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/news/add">Búa til frétt</a></li>
                         <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/event/add">Búa til viðburð</a></li>
                         <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/user/add">Bæta við notanda</a></li>
-                        <li><a sec:authorize="hasAnyRole('ROLE_ADMIN, ROLE_USER')" href="/user/userList">Listi yfir notendur</a></li>
+                        <li><a sec:authorize="hasAnyRole('ROLE_ADMIN, ROLE_USER')" href="/user/userList">Listi yfir
+                            notendur</a></li>
                         <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/ad/add">Auglýsingar</a></li>
-                        <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/infoNord/add">Bæta við upplýsingum um Nörd</a></li>
-                        <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/infoBoard/add">Bæta við upplýsingum um stjórn/miðstjórn</a></li>
+                        <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/infoNord/add">Bæta við upplýsingum um
+                            Nörd</a></li>
+                        <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/infoBoard/add">Bæta við upplýsingum um
+                            stjórn/miðstjórn</a></li>
                     </ul>
                 </li>
                 <li class="burgerSubHeading">Um Nörd</li>
                 <ul class="dropdownCat">
-                    <li><a href="#">Hvað er Nörd?</a></li>
-                    <li><a href="#">Stjórn og miðstjórn</a></li>
+                    <li><a href="/aboutNord">Hvað er Nörd?</a></li>
+                    <li><a href="/aboutBoard">Stjórn og miðstjórn</a></li>
                     <li><a href="#">Lög Nörd</a></li>
                     <li><a href="#">Kóðinn</a></li>
                     <li><a href="#">Myndir</a></li>
@@ -107,31 +108,35 @@
         </div>
 
         <div id="admin">
-            <a style="background-color: firebrick; padding: 20px;" sec:authorize="hasRole('ROLE_ADMIN')" href="javascript:void(0);" onclick="toggleAdminMenu()">Admin</a>
+            <a style="background-color: firebrick; padding: 20px;" sec:authorize="hasRole('ROLE_ADMIN')"
+               href="javascript:void(0);" onclick="toggleAdminMenu()">Admin</a>
             <ul id="adminMenu" class="menu">
                 <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/news/add">Búa til frétt</a></li>
                 <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/event/add">Búa til viðburð</a></li>
                 <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/user/add">Bæta við notanda</a></li>
-                <li><a sec:authorize="hasAnyRole('ROLE_ADMIN, ROLE_USER')" href="/user/userList">Listi yfir notendur</a></li>
+                <li><a sec:authorize="hasAnyRole('ROLE_ADMIN, ROLE_USER')" href="/user/userList">Listi yfir notendur</a>
+                </li>
                 <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/ad/add">Auglýsingar</a></li>
                 <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/infoNord/add">Bæta við upplýsingum um Nörd</a></li>
-                <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/infoBoard/add">Bæta við upplýsingum um stjórn/miðstjórn</a></li>
+                <li><a sec:authorize="hasRole('ROLE_ADMIN')" href="/infoBoard/add">Bæta við upplýsingum um
+                    stjórn/miðstjórn</a></li>
             </ul>
         </div>
     </nav>
 </header>
 
-
 <footer th:fragment="footer" class="main-footer">
     <address>
-        Nemendafélagið Nörd<br />
-        Dunhaga 7<br />
+        Nemendafélagið Nörd<br/>
+        Dunhaga 7<br/>
         107 Reykjavík
     </address>
     <p><strong>Tölvupóstur:</strong> ft@hi.is</p>
     <p><strong>Kennitala:</strong> 551087-1589</p>
     <p><strong>Reikningsnúmer:</strong> 311-26-5587</p>
-    <p><small>&copy;2017 Nörd - Nemendafélag tölvunarfræði- og hugbúnaðarverkfræðinema við Háskóla Íslands</small></p>
+    <p>
+        <small>&copy;2017 Nörd - Nemendafélag tölvunarfræði- og hugbúnaðarverkfræðinema við Háskóla Íslands</small>
+    </p>
 </footer>
 
 <div th:fragment="flash" th:if="${flash != null}" id="container">
