--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head></head>
+<head>
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
+</head>
+
+
 <body>
+<header th:replace="layout :: header"></header>
+
+<main>
 <div th:replace="layout :: flash"></div>
 
 <form th:action="@{/login}" th:object="${user}" method="post">
@@ -13,6 +22,10 @@
     <button type="submit">Login</button>
 
 </form>
+</main>
+
+<footer th:replace="layout :: footer"></footer>
 
 </body>
+
 </html>
