--- a/src/main/resources/templates/news/form.html
+++ b/src/main/resources/templates/news/form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta content ="text/html" charset="UTF-8"/>
+    <meta content="text/html" charset="UTF-8"/>
     <meta description="viewport" content="width=device-width, initial-scale=1"/>
 
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
@@ -13,39 +13,39 @@
     <title>Nörd | Nemendafélag</title>
 </head>
 <body>
-    <header th:replace="layout :: header"></header>
+<header th:replace="layout :: header"></header>
 
-    <form id="newsForm" enctype="multipart/form-data" th:action="@{${action}}" method="post" th:object="${news}">
-        <input type="hidden" th:field="*{id}"/>
+<main>
+<form id="newsForm" enctype="multipart/form-data" th:action="@{${action}}" method="post" th:object="${news}">
+    <input type="hidden" th:field="*{id}"/>
 
-        <h1 th:text="${heading}"></h1>
+    <h1 th:text="${heading}"></h1>
 
-        <!--<label for="title">Fyrirsögn:</label>-->
-        <input type="text" th:field="*{title}" id="title" placeholder="Fyrirsögn"/>
-        <div class="error-message" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
+    <!--<label for="title">Fyrirsögn:</label>-->
+    <input type="text" th:field="*{title}" id="title" placeholder="Fyrirsögn"/>
+    <div class="error-message" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
 
-        <!--<label for="description">Meginmál:</label>-->
-        <textarea cols="40" rows ="20" th:field="*{description}" id="description" placeholder="Meginmál"></textarea>
-        <div class="error-message" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></div>
+    <!--<label for="description">Meginmál:</label>-->
+    <textarea cols="40" rows="20" th:field="*{description}" id="description" placeholder="Meginmál"></textarea>
+    <div class="error-message" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></div>
 
 
-        <div class="file-wrapper">
-            <input class="inputFile" type="file" id="file" name="file" onchange="readURL(this);" />
-            <label for="file">Veldu bakgrunnsmynd fyrir fréttina</label>
-            <div id="preview" th:style="|background-image:
+    <div class="file-wrapper">
+        <input class="inputFile" type="file" id="file" name="file" onchange="readURL(this);"/>
+        <label for="file">Veldu bakgrunnsmynd fyrir fréttina</label>
+        <div id="preview" th:style="|background-image:
                         linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url(/news/${news.id}.jpeg)|"></div>
-        </div>
-        <input type="hidden" th:field="*{bytes}"/>
+    </div>
+    <input type="hidden" th:field="*{bytes}"/>
 
-        <button th:text="${submit}" type="submit"></button>
-    </form>
+    <button th:text="${submit}" type="submit"></button>
+</form>
+</main>
+<footer th:replace="layout :: footer"></footer>
 
-    <footer th:replace="layout :: footer"></footer>
-
-    <div th:replace="layout :: scripts"></div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script type="text/javascript" th:src="@{/assets/js/main.js}"></script>
-    <script type="text/javascript" th:src="@{/assets/js/newsForm.js}"></script>
+<div th:replace="layout :: scripts"></div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script type="text/javascript" th:src="@{/assets/js/newsForm.js}"></script>
 
 </body>
 
