--- a/src/main/resources/templates/news/newsDetails.html
+++ b/src/main/resources/templates/news/newsDetails.html
@@ -2,14 +2,12 @@
 
 <html>
 <head>
-    <meta content ="text/html" charset="UTF-8"/>
+    <meta content="text/html" charset="UTF-8"/>
     <meta description="viewport" content="width=device-width, initial-scale=1"/>
-
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
     <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
     <link rel="stylesheet" th:href="@{/assets/css/newsDetails.css}"/>
-
     <title>Nörd | Nemendafélag</title>
 </head>
 <body>
@@ -22,8 +20,9 @@
         <p sec:authorize="hasRole('ROLE_ADMIN')" class="infoText sectionInfo">Stjórnandi</p>
         <section sec:authorize="hasRole('ROLE_ADMIN')" class="section">
             <div id="editDelete">
-                <a id="deleteNews" th:href="@{|/news/${news.id}/delete|}"><img th:src="@{/assets/img/delete.png}" alt="delete symbol" /></a>
-                <a th:href="@{|/news/${news.id}/edit|}"><img th:src="@{/assets/img/edit.png}" alt="edit symbol" /></a>
+                <a id="deleteNews" th:href="@{|/news/${news.id}/delete|}"><img th:src="@{/assets/img/delete.png}"
+                                                                               alt="delete symbol"/></a>
+                <a th:href="@{|/news/${news.id}/edit|}"><img th:src="@{/assets/img/edit.png}" alt="edit symbol"/></a>
             </div>
         </section>
         <div id="published">
@@ -38,7 +37,7 @@
             <h2 th:text="${news.title}"></h2>
         </div>
 
-        <div id ="description">
+        <div id="description">
             <p th:text="${news.description}"></p>
         </div>
     </article>
