--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -2,12 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>Nemendafélagið Nörd</title>
-    <link rel="stylesheet" href="../../css/normalize.css" />
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/eventDetails.css}"/>
 </head>
-<body>
 
+<body>
+<header th:replace="layout :: header"></header>
+
+<main>
 <form th:action="@{${action}}" method="post" th:object="${user}">
     <input type="hidden" th:field="*{id}"/>
 
@@ -27,7 +33,10 @@
 
 
 <a th:href="@{/}">Fara á forsíðu</a>
+</main>
 
+<footer th:replace="layout :: footer"></footer>
+<div th:replace="layout :: scripts"></div>
 </body>
 
 </html>
