--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -2,12 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>Nemendafélagið Nörd</title>
-    <link rel="stylesheet" href="../../css/normalize.css" />
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/assets/css/normalize.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/main.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/eventDetails.css}"/>
 </head>
-<body>
 
+<body>
+<header th:replace="layout :: header"></header>
+
+<main>
 <!-- For each user item -->
 <div th:each="user : ${user}" class="user-items">
     <div>
@@ -16,24 +22,27 @@
 
     <div th:switch="${eventBanService.isEventBanned(user)}">
         <div th:case="${false}">
-            <a id="eventBan + ${user.count}" sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/user/${user.id}/eventBan|}">Setja á bannlista</a>
+            <a id="eventBan + ${user.count}" sec:authorize="hasRole('ROLE_ADMIN')"
+               th:href="@{|/user/${user.id}/eventBan|}">Setja á bannlista</a>
         </div>
         <div th:case="${true}">
-            <a id="removeEventBan + ${user.count}" sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/user/${user.id}/removeEventBan|}">Fjarlægja af bannlista</a>
+            <a id="removeEventBan + ${user.count}" sec:authorize="hasRole('ROLE_ADMIN')"
+               th:href="@{|/user/${user.id}/removeEventBan|}">Fjarlægja af bannlista</a>
         </div>
     </div>
 </div>
 <h2>Bannlisti:</h2>
 <div th:each="eventBan : ${eventBanService.findAllBanned()}">
     <h4 th:text="${eventBan.user.username}"></h4>
-    <a id="dong" sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/user/${eventBan.user.id}/removeEventBan|}">Fjarlægja af bannlista</a>
+    <a id="removeBan + ${eventBan.count}" sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{|/user/${eventBan.user.id}/removeEventBan|}">Fjarlægja
+        af bannlista</a>
 </div>
 
 
-
-
 <a th:href="@{/}">Fara á forsíðu</a>
+</main>
 <div th:replace="layout :: scripts"></div>
+<footer th:replace="layout :: footer"></footer>
 
 </body>
 
